@@ -31,6 +31,7 @@ Bugs fixed
 - Bug 2511 - HT Greenfield is not working
 - Bug 2521 - Include ipv6-option.h in wscript
 - Bug 2529 - Missing trace when Block ACK timeout is triggered or when missing MPDUs are announced by a Block ACK response
+- Bug 2532 - Inconsistencies between 802.11n MCS and NSS value reported in TXVECTOR
 
 Known issues
 ------------
